style some stuff

--- a/assets/stylesheet/main.less
+++ b/assets/stylesheet/main.less
@@ -95,6 +95,24 @@
     }
   }
   
+  &[data-orientation="portrait"] {
+    width: 225px;
+    height: 325px;
+    
+    .mp-picker-info {
+      width: 100%;
+      float: none;
+      height: 25%;
+    }
+    
+    .mp-picker-picker {
+      width: 100%;
+      float: none;
+      height: 75%;
+      padding-top: 2em;
+    }
+  }
+  
   .mp-picker-info {
     float: left;
     width: 30%;
