--- a/src/material-datepicker.css
+++ b/src/material-datepicker.css
@@ -68,6 +68,21 @@
   background-color: #80cbc4;
   color: #424242;
 }
+.mp-picker[data-orientation="portrait"] {
+  width: 225px;
+  height: 325px;
+}
+.mp-picker[data-orientation="portrait"] .mp-picker-info {
+  width: 100%;
+  float: none;
+  height: 25%;
+}
+.mp-picker[data-orientation="portrait"] .mp-picker-picker {
+  width: 100%;
+  float: none;
+  height: 75%;
+  padding-top: 2em;
+}
 .mp-picker .mp-picker-info {
   float: left;
   width: 30%;
