--- a/assets/stylesheet/main.less
+++ b/assets/stylesheet/main.less
@@ -30,6 +30,7 @@
   border-radius: 3px;
   overflow: hidden;
   box-shadow: 0 2.5px 6px 2px rgba(0, 0, 0, .2);
+  position: absolute;
   
   * {
     box-sizing: border-box;
