--- a/src/material-datepicker.css
+++ b/src/material-datepicker.css
@@ -5,6 +5,7 @@
   border-radius: 3px;
   overflow: hidden;
   box-shadow: 0 2.5px 6px 2px rgba(0, 0, 0, 0.2);
+  position: absolute;
 }
 .mp-picker:before,
 .mp-picker:after {
