begin with datepicker

--- a/assets/stylesheet/main.less
+++ b/assets/stylesheet/main.less
@@ -30,45 +30,57 @@
   border-radius: 3px;
   overflow: hidden;
   box-shadow: 0 2.5px 6px 2px rgba(0, 0, 0, .2);
+  width: 350px;
+  height: 12.5em;
   position: absolute;
   
   * {
     box-sizing: border-box;
   }
+
+  .mp-picker-choose {
+    * {
+      display: inline-block;
+      text-align: center;
+    }
     
-  &.mp-monthpicker {
-    position: absolute;
-    width: 350px;
-    height: 12.5em;
-    
-    .mp-picker-choose {
-      a {
-        color: @color-text;
-      }
+    a {
+      color: @color-text;
+    }
+
+    [class*="mp-picker-click"] {
+      cursor: pointer;
+      margin-bottom: .6em;
+      border-radius: 1em;
+      transition: background-color .2s ease;
       
-      [class*="mp-picker-choose-month"] {
-        float: left;
-        display: inline-block;
-        width: 100% / 3;
-        cursor: pointer;
-        margin-bottom: .6em;
-        text-align: center;
-        border-radius: 1em;
-        transition: background-color .2s ease;
 
-        &:hover {
-          background-color: darken(@color-background, 8%);
-        }
-
-        &.today {
-          color: @color-primary;
-        }
-
-        &.active {
-          color: @color-text-inverted;
-          background-color: @color-primary;
-        }
+      &:hover {
+        background-color: darken(@color-background, 8%);
       }
+
+      &.today {
+        color: @color-primary;
+      }
+
+      &.active {
+        color: @color-text-inverted;
+        background-color: @color-primary;
+      }
+    }
+    
+    .mp-picker-header {      
+      &[class*="mp-picker-header-day"] {
+        width: 100% / 7;
+      }
+    }
+    
+    .mp-picker-choose-day {
+      width: 100% / 7;
+    }
+  
+    .mp-picker-month-day {
+      width: 100% / 3;
     }
   }
   
