--- a/src/material-datepicker.css
+++ b/src/material-datepicker.css
@@ -23,6 +23,7 @@
 .mp-picker .mp-picker-choose * {
   display: inline-block;
   text-align: center;
+  font-weight: 500;
 }
 .mp-picker .mp-picker-choose a {
   color: rgba(0, 0, 0, 0.87);
@@ -34,6 +35,15 @@
   -webkit-transition: background-color 0.2s ease;
           transition: background-color 0.2s ease;
 }
+.mp-picker .mp-picker-choose [class*="mp-picker-click"].mp-picker-choose-day {
+  font-size: .8em;
+  margin: 0;
+  padding: .3em 0;
+}
+.mp-picker .mp-picker-choose [class*="mp-picker-click"].mp-empty {
+  background-color: transparent !important;
+  cursor: default;
+}
 .mp-picker .mp-picker-choose [class*="mp-picker-click"]:hover {
   background-color: #e6e6e6;
 }
@@ -43,6 +53,11 @@
 .mp-picker .mp-picker-choose [class*="mp-picker-click"].active {
   color: #ffffff;
   background-color: #009688;
+}
+.mp-picker .mp-picker-choose .mp-picker-header {
+  margin-bottom: .6em;
+  font-size: .8em;
+  opacity: .57;
 }
 .mp-picker .mp-picker-choose .mp-picker-header[class*="mp-picker-header-day"] {
   width: 14.28571429%;
@@ -90,6 +105,8 @@
   width: 100%;
   float: none;
   height: 75%;
+}
+.mp-picker.mp-monthpicker[data-orientation="portrait"] .mp-picker-picker {
   padding-top: 2em;
 }
 .mp-picker .mp-picker-info {
