--- a/src/stylesheet/main.less
+++ b/src/stylesheet/main.less
@@ -44,7 +44,9 @@
       font-weight: 500;
     }
     
-    a {
+    a,
+    a:hover,
+    a:focus {
       color: @color-text;
       text-decoration: none;
     }
